[gd_scene load_steps=4 format=3 uid="uid://5tciyrj8bdij"]

[ext_resource type="Script" path="res://Scenes/UI_Elements/settings_comp/choice_setting.gd" id="1_rc5we"]
[ext_resource type="Theme" uid="uid://dtqfsbjdbbwas" path="res://UI_Theme/Brimblo.tres" id="2_ywr6t"]
[ext_resource type="AudioStream" uid="uid://c5fw4tvlujmfy" path="res://Assets/SFX/UI/zapsplat_multimedia_game_sound_glass_clink_003_72372.mp3" id="4_jocy5"]

[node name="Slider" type="HBoxContainer"]
offset_right = 760.0
offset_bottom = 98.0
size_flags_vertical = 3
theme_override_constants/separation = 0
script = ExtResource("1_rc5we")

[node name="SettingName" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Resolution:"
vertical_alignment = 1

[node name="Control" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 14
theme_override_constants/separation = 5
alignment = 2

[node name="Left" type="Button" parent="Control"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "<"
alignment = 2

[node name="Selected" type="Button" parent="Control"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "1x"

[node name="Right" type="Button" parent="Control"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = ">"
alignment = 0

[node name="OptionButton" type="OptionButton" parent="."]
visible = false
layout_mode = 2
theme = ExtResource("2_ywr6t")
item_count = 4
selected = 0
popup/item_0/text = "  1x  "
popup/item_0/id = 0
popup/item_1/text = "  2x  "
popup/item_1/id = 1
popup/item_2/text = "  3x  "
popup/item_2/id = 2
popup/item_3/text = "  4x  "
popup/item_3/id = 3

[node name="Focus" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jocy5")
volume_db = -12.0
pitch_scale = 2.0
bus = &"SFX"

[connection signal="pressed" from="Control/Left" to="." method="_on_left_pressed"]
[connection signal="focus_entered" from="Control/Selected" to="." method="_on_selected_focus_entered"]
[connection signal="focus_exited" from="Control/Selected" to="." method="_on_selected_focus_exited"]
[connection signal="pressed" from="Control/Right" to="." method="_on_right_pressed"]
